# app/Api/V1/Controllers/EmailNotification.php
@@ -2,6 +2,7 @@
 
 namespace App\Api\V1\Controllers;
 
+use App\Http\Requests\Email\ContactUsRequest;
 use App\Mail\TestEmail;
 use Illuminate\Http\Request;
 use App\Http\Controllers\Controller;
@@ -10,7 +11,7 @@ use Illuminate\Support\Facades\Mail;
 /**
  * @SWG\Post(
  *     path="/api/email/test",
- *     summary="Get get test responce",
+ *     summary="Send test email",
  *     @SWG\Response(
  *         response=200,
  *         description="successful operation"
@@ -31,5 +32,23 @@ class EmailNotification extends Controller
     public function test(){
         Mail::to("test@test.com")->send(new TestEmail());
         return response()->json(["status" => "ok"]);
+    }
+
+    /**
+     * @param \App\Http\Requests\Email\ContactUsRequest $request
+     * @return \Illuminate\Http\JsonResponse
+     */
+    public function contactUs(ContactUsRequest $request){
+
+        Mail::to("test@test.com")->send(new TestEmail());
+
+        return response()->json([
+            "status" => "ok",
+            "requestFirstName" => $request->FirstName,
+            "requestSecondName" => $request->SecondName,
+            "requestPhone" => $request->Phone,
+            "requestEmail" => $request->Email,
+            "requestMessage" => $request->Message??"",
+        ]);
     }
 }
